working on userPagemodule

--- a/koji/src/app/user-page/body/body/body.component.scss
+++ b/koji/src/app/user-page/body/body/body.component.scss
@@ -6,8 +6,8 @@
 }
 .body{
     position: absolute;
+    
     width: 90%; height: 95%;
     border-radius: 30px;
-    background: -webkit-linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
-    background: linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
+    background-color: rgb(4, 99, 99);
 }
