--- a/koji/src/app/user-page/nav-bar/nav-bar/nav-bar.component.html
+++ b/koji/src/app/user-page/nav-bar/nav-bar/nav-bar.component.html
@@ -1,3 +1,42 @@
 <div class="nav-bar-container">
-    <div class="nav-bar"></div>
+    <div class="nav-bar">
+        <div
+            *ngIf="userPageInformation.selectedGroup!==undefined"
+            class="group-container"
+            >
+            <div class="image-container">
+                <img src="../../../../assets/noProfile.jpg" alt="" width="130px" height="130px" class="rounded-pill">
+                <div class="text-center h4 name-container text-white">{{userPageInformation.selectedGroup.name}}</div>
+            </div>
+
+            <div class="options-container">
+
+                <button class="btn btn-info row option-item mb-3">مشخصات گروه</button>
+                <button class="btn btn-info row option-item mb-3">نمایش اعضاء</button>
+                <button class="btn btn-info row option-item mb-3">پیام های گروه</button>
+                <button class="btn btn-info row option-item mb-3">قرارهای گروه</button>
+                <button class="btn btn-info row option-item mb-3">تنظیمات گروه</button>
+
+            </div>
+        </div>
+
+        <div
+            *ngIf="userPageInformation.selectedGroup===undefined"
+            class="user-container"
+            >
+            <div class="image-container">
+                <img src="../../../../assets/noProfile.jpg" alt="" width="130px" height="130px" class="rounded-pill">
+                <div class="text-center h4 name-container text-white">user name</div>
+            </div>
+            <div class="options-container">
+
+                <button class="btn btn-info row option-item mb-3">نمایش پروفایل</button>
+                <button class="btn btn-info row option-item mb-3">گروه های شما</button>
+                <button class="btn btn-info row option-item mb-3">ساختن گروه</button>
+                <button class="btn btn-info row option-item mb-3">تنظیمات</button>
+                <button class="btn btn-info row option-item mb-3">دعوت دوستان</button>
+
+            </div>
+        </div>
+    </div>
 </div>
