--- a/koji/src/app/user-page/header/header/header.component.scss
+++ b/koji/src/app/user-page/header/header/header.component.scss
@@ -5,19 +5,44 @@
     align-items: center;
 }
 .header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 100%; height: 80%;
     // background-color: lightskyblue;
     border-radius: 30px;
-    background: -webkit-linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
-    background: linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
+    background: -webkit-linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
+    background: linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
 }
 .showDetailesBtn{
     position: absolute;
-    width: 10px;
-    height: 20px;
-    top: 130px;
+    display: flex;
+    text-align: center;
+    padding-bottom: 2px;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    top: 145px;
+    left: 0px;
     transition: all 1s;
     background-color: rgba(252, 0, 105, 0.747);
     z-index: 1;
+}
+.header-item-container{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.header-item{
+    padding-left: 25px;
+}
+.header-item:hover{
+    font-size: 20px;
+}
+.search-container{
+    position: absolute;
+    left: 15px;
+    width: 100px;
 }
