--- a/koji/src/app/user-page/nav-bar/nav-bar/nav-bar.component.scss
+++ b/koji/src/app/user-page/nav-bar/nav-bar/nav-bar.component.scss
@@ -8,6 +8,47 @@
     position: absolute;
     width: 90%; height: 95%;
     border-radius: 30px;
-    background: -webkit-linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
-    background: linear-gradient(to right bottom, rgb(5, 67, 105), rgba(252, 0, 105, 0.562));
+    background: -webkit-linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
+    background: linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
+}
+.group-container .user-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+.image-container{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 230px;
+    border-bottom: 2px solid black;
+}
+.image-container img{
+    position: absolute;
+    top: 30px;
+}
+.name-container{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px
+}
+.options-container{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 230px;
+    width: 100%;
+    height: 500px;
+}
+.option-item{
+    text-align: center;
+    position: relative;
+    width: 90%;
+    height: 50px;
 }
