--- a/koji/src/app/login-page/login-page.component.scss
+++ b/koji/src/app/login-page/login-page.component.scss
@@ -11,8 +11,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    margin: -20px 0 50px;
-    overflow: scroll;
+    overflow: auto;
 }
 h1{
     font-weight: bold;
@@ -202,53 +201,6 @@ input{
     width: 40%;
     height: 40%;
 }
-.overlay{
-    background: #a26ff3;
-    background: -webkit-linear-gradient(to right, #63b1ee, #a26ff3);
-    background: linear-gradient(to right, #63b1ee, #a26ff3);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 0;
-    color: #ffffff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-}
-.container.right-panel-active .overlay{
-    transform: translateX(50%);
-}
-.overlay-panel{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-}
-.overlay-left{
-    transform: translateX(-20%);
-}
-.container.right-panel-active .overlay-left{
-    transform: translateX(0);
-}
-.overlay-right{
-    right: 0;
-    transform: translateX(0);
-}
-.container.right-panel-active .overlay-right{
-    transform: translateX(20%);
-}
-
-
 
 
 @media screen and (max-width: 800px) {
