--- a/koji/src/app/user-page/user-page.component.html
+++ b/koji/src/app/user-page/user-page.component.html
@@ -1,5 +1,5 @@
 <div class="user-page" (window:resize)="onResize()">
-    <div class="container" id="user-page-container">
+    <div class="container-liquid p-3" id="user-page-container">
         <div class="header-container" [ngStyle]="information.headerStyle">
             <app-header></app-header>
         </div>
