--- a/koji/src/app/about-us-page/about-us-page.component.html
+++ b/koji/src/app/about-us-page/about-us-page.component.html
@@ -1,35 +1,68 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" dir="rtl">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" س dir="rtl">
   <div class="container-fluid">
     <a class="navbar-brand" href="">
       <img src="../../../assets/logo.jpeg" alt="لوگو" style="width:40px;" class="rounded-pill">
       <span class="h3 m-4">کجی</span>
     </a>
-    <button class="btn btn-info" (click)="navigate('login')">login</button>
+    <button class="btn btn-info" (click)="navigate('login')">ورود</button>
   </div>
 </nav> 
+
 <div class="container-fluid body">
-  <div class="row text-white">
+  <div class="row text-white" dir="rtl">
     <div class="col-lg-8">
-      <div class="container p-5">
-        <strong class="display-3 h1">Hi! We can help you to set your appointments.</strong>
+      <div class="pt-5" dir="rtl">
+        <h1 class="display-3 h1 p-3 text-dark"> با کجی قرار گذاشتن خیلییییی راحته . . .</h1>
         <div class="line m-3"></div>
-        <p class="h4">this site allows you to set your appointments as a group.</p>
-        <p class="h4">you just need to login in our site.</p>
+        <ul class="">
+          <li class="h4 p-4">کجی به شما این امکان رو میده که به سادگی قرار هاتون رو مدیریت کنید.</li>
+          <li class="h4 p-4">شما تنها نیاز دارید که تو کجی عضو شوید و از خدمات این سایت به صورت راییگااان بهره ببرید.</li>
+        </ul>
       </div>
     </div>
     <div class="col-lg-4">
-      <div class="container text-center p-5">
-        <img src="../../../assets/callender-icon.png" alt="Image" style="width:280px;" class="text-white h3 rounded-pill">
+      <div class="text-center pt-5">
+        <img src="../../assets/callender.webp" alt="Image" style="width:280px; " class="text-white h3 rounded-pill">
         <div class="p-5">
           <strong class="h1">کجی</strong>
         </div>
       </div>
     </div>
   </div>
-  <div class="row text-center p-5">
-    <p class="h2">we are waiting for you . . .</p>
+
+  <hr>
+  <div class="row text-center p-5 text-white" dir="rtl">
+    <p class="h2">منتظر شما هستیم . . .</p>
     <p class="h2">: )</p>
   </div>
+
+  <div class="row bg-white" dir="rtl">
+    <div class="col-lg-4">
+      <div class="container text-center pt-5">
+        <img src="../../assets/solutions.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
+        <div class="pb-5">
+          <strong class="h2 text-dark">استفاده از ایده ها و نظرات شما در پروژه کجی</strong>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="container text-center pt-5">
+        <img src="../../assets/developers.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
+        <div class="pb-5">
+          <strong class="h2 text-dark">متخصصین تیم کجی دائما درحال توسعه این پروژه هستند</strong>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="container text-center pt-5">
+        <img src="../../assets/technology.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
+        <div class="pb-5">
+          <strong class="h2 text-dark">استفاده از بروز ترین تکنولوژی ها در پروژه کجی</strong>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="row bg-dark text-white p-5" dir="ltr">
     <div class="container text-center">
       <p><strong>creator: </strong>felan felan</p>
