--- a/koji/src/app/login-page/login-page.component.html
+++ b/koji/src/app/login-page/login-page.component.html
@@ -2,84 +2,86 @@
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
-                <h1>Sign Up</h1>
+                <h1  dir="rtl">ثبت نام</h1>
                 <div>
-                    <input type="text" placeholder="Name" name="nameU" id="nameU" [formControl]="nameU">  
-                    <span [hidden]="nameU.valid || nameU.untouched" class="error">  
+                    <input class="text-center" type="text" placeholder="نام" name="nameU" id="nameU" [formControl]="nameU">  
+                    <span [hidden]="nameU.valid || nameU.untouched" class="error"  dir="rtl">  
                         <div [hidden]="!nameU.hasError('minlength')">  
-                            Name can not be shorter than 3 characters.  
+                            نام شما نمیتواند کمتر از سه حرف باشد.  
                         </div>  
                         <div [hidden]="!nameU.hasError('required')">  
-                            Name is required.  
+                            نام را وارد کنید
                         </div>  
                     </span>  
                 </div>
                 <div>
-                    <input type="email" placeholder="Email" name="emailU" id="emailU" [formControl]="emailU">  
-                    <span [hidden]="emailU.valid || emailU.untouched" class="error">  
+                    <input class="text-center" type="email" placeholder="ایمیل" name="emailU" id="emailU" [formControl]="emailU">  
+                    <span [hidden]="emailU.valid || emailU.untouched" class="error" dir="rtl">  
                         <div [hidden]="!emailU.hasError('minlength')">  
-                            Email can not be shorter than 4 characters.  
+                            ایمیل نمیتواند کمتر از چهار حرف باشد.
                         </div>  
                         <div [hidden]="!emailU.hasError('required')">  
-                            Email is required.  
+                            ایمیل را وارد کنید.
                         </div>  
                     </span>  
                 </div>
                 <div>
-                    <input type="password" placeholder="Password" name="passwordU" id="passwordU" [formControl]="passwordU">  
-                    <span [hidden]="passwordU.valid || passwordU.untouched" class="error">  
+                    <input class="text-center" type="password" placeholder="پسورد" name="passwordU" id="passwordU" [formControl]="passwordU">  
+                    <span [hidden]="passwordU.valid || passwordU.untouched" class="error" dir="rtl">  
                         <div [hidden]="!passwordU.hasError('minlength')">  
-                            Password can not be shorter than 4 characters.  
+                            پسورد نمیتواند کمتر از چهار حرف باشد.
                         </div>  
                         <div [hidden]="!passwordU.hasError('required')">  
-                            Password is required.  
+                            پسوورد را وارد کنید.
                         </div>
                         <br>
                     </span>  
                 </div>
-                <button type="submit" [disabled]="!signUpForm.valid" class="submit">Sign Up</button>  
+                <button dir="rtl" type="submit" [disabled]="!signUpForm.valid" class="submit">ثبت نام</button>  
             </form>
         </div>
         <div class="form-container sign-in-container">
             <form [formGroup]="signInForm" (ngSubmit)="signIn()">
-                <h1>Sign in</h1>
+                <h1 dir="rtl">ورود</h1>
                 <div>
-                    <input type="email" placeholder="Email" name="emailI" id="emailI" [formControl]="emailI">
-                    <span [hidden]="emailI.valid || emailI.untouched" class="error">  
+                    <input class="text-center" type="email" placeholder="ایمیل" name="emailI" id="emailI" [formControl]="emailI">
+                    <span [hidden]="emailI.valid || emailI.untouched" class="error" dir="rtl">  
                         <div [hidden]="!emailI.hasError('minlength')">  
-                            Email can not be shorter than 4 characters.  
+                            ایمیل نمیتواند کمتر از چهار حرف باشد.
                         </div>  
                         <div [hidden]="!emailI.hasError('required')">  
-                            Email is required.  
+                            ایمیل را وارد کنید.
                         </div>  
                     </span>  
                 </div>
                 <div>
-                    <input type="password" placeholder="Password" name="passwordI" id="passwordI" [formControl]="passwordI">  
-                    <span [hidden]="passwordI.valid || passwordI.untouched" class="error">  
+                    <input class="text-center" type="password" placeholder="پسوورد" name="passwordI" id="passwordI" [formControl]="passwordI">  
+                    <span [hidden]="passwordI.valid || passwordI.untouched" class="error" dir="rtl">  
                         <div [hidden]="!passwordI.hasError('minlength')">  
-                            Password can not be shorter than 4 characters.  
+                            پسوورد نمیتواند کمتر از چهار حرف باشد.
                         </div>  
                         <div [hidden]="!passwordI.hasError('required')">  
-                            Password is required.  
+                            پسوورد را وارد کنید.
                         </div>  
                     </span>  
                 </div>
-                <a href="#">Forget your password?</a>
-                <button type="submit" [disabled]="!signInForm.valid" class="submit">Sign In</button>  
+                <a href="#">پسوردتان را فراموش کردید؟</a>
+                <button type="submit" [disabled]="!signInForm.valid" class="submit" dir="rtl">ورود</button>  
             </form>
         </div>
         <div class="overlay-container">
             <div class="overlay">
-                <div class="overlay-panel overlay-left">
-                    <h1>Hello, Friend!</h1>
-                    <p>Enter your personal details to create a <strong>Koji</strong> account.</p>
-                    <button class="ghost" id="signIn" onclick="container.classList.remove('right-panel-active');">Sign In</button>
+                <div class="overlay-panel overlay-left" dir="rtl">
+                    <h1>سلام دوست عزیز!</h1>
+                    <p>برای ساختن حساب شخصی در<strong> کجی</strong> اطلاعات خود را وارد کنید.</p>
+                    <p>از قبل حساب شخصی دارید؟</p>
+                    <button class="ghost" id="signIn" onclick="container.classList.remove('right-panel-active');">ورود</button>
                 </div>
-                <div class="overlay-panel overlay-right">
-                    <h1>Welcome Back!</h1>
-                    <p>Please login to your <strong>Koji</strong> account with your personal info.</p>
-                    <button class="ghost" id="signUp" onclick="container.classList.add('right-panel-active');">Sign Up</button>
+                <div class="overlay-panel overlay-right" dir="rtl">
+                    <h1>خوش آمدید!</h1>
+                    <p>لطفا با وارد کردن اطلاعاتتان وارد حساب شخصیتان در <strong>کجی</strong> شوید.</p>
+                    <p>حساب شخصی در کجی ندارید؟</p>
+                    <button class="ghost" id="signUp" onclick="container.classList.add('right-panel-active');">ثبت نام</button>
                 </div>
             </div>
         </div>
