--- a/koji/src/app/login-page/login-page.component.scss
+++ b/koji/src/app/login-page/login-page.component.scss
@@ -8,7 +8,7 @@
     align-items: center;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -204,9 +204,12 @@ input{
 
 
 @media screen and (max-width: 800px) {
+    .body{
+        height: 900px;
+    }
     .container{
         position: absolute;
-        top: 50px;
+        // top: 50px;
         min-height: 800px;
     }
     .form-container{
