user page style changed

--- a/koji/src/app/user-page/body/event/event.component.html
+++ b/koji/src/app/user-page/body/event/event.component.html
@@ -1,6 +1,9 @@
 <div class="event-container">
     <div class="event">
         <div class="detail-container">
+            <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
+                >
+            </button>
             <p class="text-center h2">{{selectedEvent.title}}</p>
             <p class="text-center h4">{{selectedEvent.desceriptions}}</p>
         </div>
