--- a/koji/src/app/user-page/body/user-home/user-home.component.html
+++ b/koji/src/app/user-page/body/user-home/user-home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
     <div class="home">
         <div class="h2 text-center header">
-            گروه های شما
+            <div class=""> گروه های شما</div>
         </div>
         <div 
             dir="rtl"
