--- a/koji/src/app/user-page/body/event/event.component.scss
+++ b/koji/src/app/user-page/body/event/event.component.scss
@@ -7,9 +7,10 @@
     height: 100%;
 }
 .event{
+    box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.582);
     overflow: auto;
 }
@@ -20,7 +21,7 @@
     justify-content: center;
     width: 100%;
     height: 30%;
-    border: 2px solid black;
+    border-bottom: 2px solid black;
     flex-direction: column;
 }
 .body-container{
@@ -28,7 +29,7 @@
     top: 30%;
     width: 100%;
     height: 70%;
-    border: 2px solid black;
+    border-top: 2px solid black;
     border-top: none;
 }
 .selecting-bar{
@@ -58,7 +59,6 @@
     height: 90%;
     width: 100%;
     padding: 30px;
-    overflow: auto;
 }
 .conditions-container form{
     padding-right: 30px;
@@ -79,4 +79,14 @@
 .place-item,.dates-item{
     width: fit-content;
     margin: 2px;
+}
+.btn-back-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 5px;
+    top: 40px;
 }
