--- a/koji/src/app/user-page/body/group/group.component.scss
+++ b/koji/src/app/user-page/body/group/group.component.scss
@@ -7,9 +7,10 @@
     height: 100%;
 }
 .group{
+    box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.582);
     overflow: auto;
 }
@@ -31,4 +32,14 @@
     align-items: center;
     width: 100%;
     height: 120px;
+}
+.btn-back-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 5px;
+    top: 40px;
 }
