--- a/koji/src/app/user-page/body/user-home/user-home.component.scss
+++ b/koji/src/app/user-page/body/user-home/user-home.component.scss
@@ -5,12 +5,14 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    
 }
 .home{
+    box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
-    width: 90%;
-    height: 90%;
-    background-color: rgba(255, 255, 255, 0.582);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(206, 209, 166, 0.719);
     overflow: auto;
 }
 .group{
@@ -23,7 +25,7 @@
     align-items: center;
 }
 .group:hover{
-    background-color: rgba(169, 169, 169, 0.575);
+    background-color: rgba(206, 209, 166, 0.877);
 }
 .header{
     display: flex;
