--- a/koji/src/app/user-page/nav-bar/nav-bar.component.scss
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.scss
@@ -3,32 +3,26 @@
     width: 100%; height: 100%;
     justify-content: center;
     align-items: center;
+    box-shadow: 2px 0 5px black;
 }
 .nav-bar{
     position: absolute;
-    width: 90%; height: 95%;
-    border-radius: 30px;
-    background: -webkit-linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
-    background: linear-gradient(to right bottom, rgb(4, 99, 99), rgba(252, 0, 105, 0.562));
-}
-.group-container .user-container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
+    width: 100%; height: 100%;
+    background-color: rgb(9, 95, 110);
+    overflow-y: auto;
 }
 .image-container{
     display: flex;
     justify-content: center;
-    position: absolute;
+    position: relative;
     top: 0;
     width: 100%;
-    height: 230px;
-    border-bottom: 2px solid black;
+    height: 220px;
+    border-bottom: 2px solid yellow;
 }
 .image-container img{
     position: absolute;
-    top: 30px;
+    top: 20px;
 }
 .name-container{
     position: absolute;
@@ -37,18 +31,26 @@
     height: 40px
 }
 .options-container{
-    margin-top: 50px;
+    margin-top: 25px;
     flex-direction: column;
     display: flex;
     align-items: center;
-    position: absolute;
-    top: 230px;
+    position: relative;
+    top: 0;
     width: 100%;
-    height: 500px;
 }
 .option-item{
     text-align: center;
     position: relative;
     width: 90%;
     height: 50px;
+}
+.nav-bar-controller{
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 50px;
+}
+.nav-bar-controller button{
+    margin: 7px;
 }
