--- a/koji/src/app/user-page/user-page.component.scss
+++ b/koji/src/app/user-page/user-page.component.scss
@@ -1,34 +1,23 @@
 .user-page{
-    // background-color: rgb(128, 0, 74);
-    height: 1000px;
-    overflow: hidden;
-}
-#user-page-container{
+    position: fixed;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 .header-container{
-    transition:all 1s;
-    position: relative;
-    width: 100%; height: 100px;
+    transition:all 0.5s;
+    position: absolute;
+    width: 100%; height: 75px;
+    z-index: 2;
 }
 .nav-bar-container{
-    transition:all 1s;
-    position: relative;
-    width: 30%; height: 550px;
+    transition:width 0.5s;
+    position: absolute;
+    top: 75px;
+    z-index: 1;
 }
 .body-container{
-    transition:all 1s;
-    position: relative;
-    width: 70%; height: 550px;
-    top: -550px; left: 30%;
-}
-
-
-@media screen and (max-width: 800px) {
-    // .nav-bar-container{
-    //     width: 0;
-    // }
-    .body-container{
-        width: 100%; left: 0;
-    }
+    transition:left 0.5s;
+    position: absolute;
+    top: 75px;
 }
