bodyPage  modules added

--- a/koji/src/app/user-page/body/callender/callender.component.html
+++ b/koji/src/app/user-page/body/callender/callender.component.html
@@ -1,1 +1,9 @@
-<p>callender works!</p>
+<div class="callender-container">
+    <div class="callender">
+        <div class="h2 text-right header" dir="rtl">
+            <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
+                <
+            </button>
+        </div>
+    </div>
+</div>
