--- a/koji/src/app/user-page/body/group-profile/group-profile.component.html
+++ b/koji/src/app/user-page/body/group-profile/group-profile.component.html
@@ -1,5 +1,5 @@
-<div class="history-container">
-    <div class="history">
+<div class="group-profile-container">
+    <div class="group-profile">
         <div class="h2 text-right header" dir="rtl">
             <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
                 <
