--- a/koji/src/app/user-page/user-page.component.scss
+++ b/koji/src/app/user-page/user-page.component.scss
@@ -11,7 +11,7 @@
     z-index: 2;
 }
 .nav-bar-container{
-    transition:width 0.5s;
+    transition:all 0.5s;
     position: absolute;
     top: 75px;
     z-index: 1;
@@ -20,4 +20,7 @@
     transition:left 0.5s;
     position: absolute;
     top: 75px;
+}
+.menu-controll-btn{
+    margin: 7px;
 }
