--- a/koji/src/app/user-page/body/create-group/create-group.component.html
+++ b/koji/src/app/user-page/body/create-group/create-group.component.html
@@ -1,5 +1,5 @@
-<div class="history-container">
-    <div class="history">
+<div class="create-group-container">
+    <div class="create-group">
         <div class="h2 text-right header" dir="rtl">
             <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
                 <
