--- a/koji/src/app/user-page/body/event/event.component.scss
+++ b/koji/src/app/user-page/body/event/event.component.scss
@@ -9,8 +9,9 @@
 .event{
     box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
-    width: 100%;
-    height: 100%;
+    border-radius: 15px;
+    width: 90%;
+    height: 90%;
     background-color: rgba(255, 255, 255, 0.582);
     overflow: auto;
 }
