--- a/koji/src/app/user-page/body/group-profile/group-profile.component.scss
+++ b/koji/src/app/user-page/body/group-profile/group-profile.component.scss
@@ -1,4 +1,4 @@
-.group-container{
+.group-profile-container{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
 }
-.group{
+.group-profile{
     border-radius: 15px;
     box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
@@ -14,18 +14,6 @@
     height: 90%;
     background-color: rgba(255, 255, 255, 0.582);
     overflow: auto;
-}
-.event{
-    width: 100%;
-    height: 100px;
-    border-top: 2px solid black;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.event:hover{
-    background-color: rgba(169, 169, 169, 0.575);
 }
 .header{
     display: flex;
