--- a/koji/src/app/user-page/body/user-home/user-home.component.scss
+++ b/koji/src/app/user-page/body/user-home/user-home.component.scss
@@ -8,10 +8,11 @@
     
 }
 .home{
+    border-radius: 15px;
     box-shadow: 2px 2px 10px rgb(61, 61, 61) ,-2px -2px 10px rgb(61, 61, 61);
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     background-color: rgba(206, 209, 166, 0.719);
     overflow: auto;
 }
