--- a/koji/src/app/user-page/nav-bar/nav-bar.component.html
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.html
@@ -1,9 +1,6 @@
-<div class="nav-bar-container" (window:resize)="onResize()">
+<div class="nav-bar-container">
     <div class="nav-bar">
-        <div class="nav-bar-controller" *ngIf="userPageInformation.pageWidth<=800 || userPageInformation.showMenu">
-            <button class="btn btn-dark" (click)="changeNavBarState()">{{navBarControlleContent}}</button>
-        </div>
-        <div class="image-container" *ngIf="userPageInformation.pageWidth>800 || userPageInformation.showMenu">
+        <div class="image-container">
             <img src="../../../../assets/noProfile.jpg" alt="" width="130px" height="130px" class="rounded-pill">
             <div
                 *ngIf="userPageInformation.selectedGroup!==undefined"
@@ -16,7 +13,7 @@
                 {{userData.name}}
             </div>
         </div>
-        <div class="options-container" *ngIf="userPageInformation.pageWidth>800 || userPageInformation.showMenu">
+        <div class="options-container">
             <button class="btn btn-dark text-white row option-item mb-3">تنظیم قرار جدید</button>
             <button class="btn btn-dark text-white row option-item mb-3">نمایش پروفایل</button>
             <button class="btn btn-dark text-white row option-item mb-3">جستوجوی گروه</button>
