--- a/koji/src/app/user-page/body/group/group.component.html
+++ b/koji/src/app/user-page/body/group/group.component.html
@@ -1,9 +1,12 @@
 <div class="group-container">
     <div class="group">
         <div class="h2 text-right header" dir="rtl">
-            <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
-                <
-            </button>
+            <div class="button-panle p-3">
+                <button class="btn bg-dark text-white rounded-pill h6" (click)="back()">
+                    <
+                </button>
+                <button class="btn btn-dark text-white ounded-pill h6" (click)="navigate('user/group/profile')">?</button>
+            </div>
             <div class="">
                 قرار های این گروه
             </div>
