--- a/koji/src/app/user-page/body/create-group/create-group.component.html
+++ b/koji/src/app/user-page/body/create-group/create-group.component.html
@@ -1,9 +1,50 @@
 <div class="create-group-container">
     <div class="create-group">
         <div class="h2 text-right header" dir="rtl">
+            <div>
+                یک گروه جدید بسازید
+            </div>
             <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
                 <
             </button>
+        </div>
+        <div class="body">
+            <form class="mt-4 mb-4" [formGroup]="createGroupForm" (ngSubmit)="create()">
+                <div>
+                    <input class="text-center" type="text" placeholder="نام گروه" name="groupName" id="groupName" [formControl]="groupName">  
+                    <span [hidden]="true" class="error"  dir="rtl">  
+                        <div [hidden]="true">  
+                            نام شما نمیتواند کمتر از سه حرف باشد.  
+                        </div>  
+                        <div [hidden]="true">  
+                            نام را وارد کنید
+                        </div>  
+                    </span>  
+                </div>
+                <div dir="rtl">
+                    <!-- <label for="groupBio">در باره گروه توضیحاتی بنویسید:</label> -->
+                    <textarea rows="4" cols="19" class="text-center" type="text" placeholder="درباره گروه" name="groupBio" id="groupBio" [formControl]="groupBio"></textarea>
+                    <span [hidden]="true" class="error"  dir="rtl">  
+                        <div [hidden]="true">  
+                            نام شما نمیتواند کمتر از سه حرف باشد.  
+                        </div>  
+                        <div [hidden]="true">  
+                            نام را وارد کنید
+                        </div>  
+                    </span>  
+                </div>
+                <div dir="rtl">
+                    <label for="groupType">نوع گروه را انتخاب کنید: </label>
+                    <select class="btn btn-warning m-4" name="groupType" id="groupType" [formControl]="groupType">
+                      <option value="private">خصوصی</option>
+                      <option value="public">عمومی</option>
+                    </select>
+                </div>
+                <button dir="rtl" type="submit" [disabled]="false" class="submit btn-form btn-success mb-3">ساختن</button>  
+            </form>
+            <div class="group-link">
+
+            </div>
         </div>
     </div>
 </div>
