--- a/koji/src/app/user-page/body/event/event.component.html
+++ b/koji/src/app/user-page/body/event/event.component.html
@@ -1,30 +1,33 @@
 <div class="event-container">
     <div class="event">
-        <div class="detail-container">
-            <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
-                >
-            </button>
+        <div class="header">
+            <div class="button-panle p-3">
+                <button class="btn bg-dark text-white rounded-pill h6" (click)="back()">
+                    >
+                </button>
+                <button *ngIf="false" class="btn btn-dark text-white ounded-pill h6" (click)="navigate('user/group/profile')">?</button>
+            </div>
             <p class="text-center h2">{{selectedEvent.title}}</p>
             <p class="text-center h4">{{selectedEvent.desceriptions}}</p>
         </div>
-        <div class="body-container">
-            <div class="selecting-bar">
+        <div class="body">
+            <div class="navigate-panel">
                 <div 
-                    class="selecting-item"
+                    class="navigate-item"
                     [ngClass]="{'selected':selectedItem=='user'}"
                     (click)="selectedItem='user'"
                 >
                     شرایط شما
                 </div>
                 <div
-                    class="selecting-item"
+                    class="navigate-item"
                     [ngClass]="{'selected':selectedItem=='all'}"
                     (click)="selectedItem='all'"
                 >
                     شرایط بقیه افراد
                 </div>
                 <div
-                    class="selecting-item"
+                    class="navigate-item"
                     [ngClass]="{'selected':selectedItem=='final'}"
                     (click)="selectedItem='final'"    
                 >
@@ -41,37 +44,21 @@
                     <form (ngSubmit)="setUserConditions()">
                         <div *ngIf="state==1">
                             <div class="mb-3">
-                                <label for="place" class="h5">مکان هایی که میتوانید را اضافه کنید</label><br>
-                                <input 
-                                    style="width: 100%; height: 40px;" 
-                                    type="text" placeholder="نام مکان" 
-                                    name="place" id="place"
-                                    [(ngModel)]="placeInput"
-                                    >
-                                <button class="btn btn-danger" (click)="addPlace()">افزودن</button>
+                                <label for="place" class="h5">مکان هایی که میتوانید را انتخاب کنید</label><br>
                                 <br><br>
                                 <div class="places-container">
-                                    <div class="place-item bg-success" *ngFor="let place of places;let i=index">
-                                        <button class="btn btn-danger mr-3" (click)="deletePlace(i)">x</button>
-                                        <span class="p-3 text-white">{{place}}</span>
+                                    <div class="place-item p-3" (click)="changePlaceItemState(i)" [ngClass]="{'bg-success':place.selected,'bg-danger':!place.selected}" *ngFor="let place of places;let i=index">
+                                        <span class="p-3 text-white">{{place.title}}</span>
                                     </div>
                                 </div>
                             </div>
                             <hr>
                             <div class="mb-3">
-                                <label for="date" class="h5">تاریخ هایی که میتوانید را اضافه کنید</label><br>
-                                <input 
-                                     style="width: 100%; text-align: center; height: 40px;" 
-                                     type="datetime-local" 
-                                     name="date" id="date" 
-                                     [(ngModel)]="dateInput">
-                                <button class="btn btn-danger" (click)="addDate()">افزودن</button>
-                                     
+                                <label for="date" class="h5">تاریخ هایی که میتوانید را انتخاب کنید</label><br>   
                                 <br><br>
                                 <div class="dates-container">
-                                    <div class="dates-item bg-success" *ngFor="let date of dates;let i=index">
-                                        <button class="btn btn-danger mr-3" (click)="deleteDate(i)">x</button>
-                                        <span class="p-3 text-white">{{date}}</span>
+                                    <div class="dates-item p-3" (click)="changeDateItemState(i)" [ngClass]="{'bg-success':date.selected,'bg-danger':!date.selected}" *ngFor="let date of dates;let i=index">
+                                        <span class="p-3 text-white">{{date.title}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -97,9 +84,9 @@
                     <div *ngFor="let conditions of selectedEvent.conditions | keyvalue">
                         {{conditions.key}}: 
                         <br>
-                        {{conditions.value.placeName[0]}}
+                        {{conditions.value.placeName[0].title}}
                         <br>
-                        {{conditions.value.localDate[0]}}
+                        {{conditions.value.localDate[0].title}}
                         <hr>
                     </div>
                 </div>
@@ -108,9 +95,9 @@
                     *ngIf="selectedItem=='final'"
                     class="final-conditions text-center h2"
                 >
-                {{selectedEvent.finalConditions!.placeName}}
+                {{selectedEvent.finalConditions!.placeName[0].title}}
                 <hr>
-                {{selectedEvent.finalConditions!.localDate}}
+                {{selectedEvent.finalConditions!.localDate[0].title}}
                 <hr>
                 </div>
             </div>
