--- a/koji/src/app/user-page/body/group/group.component.scss
+++ b/koji/src/app/user-page/body/group/group.component.scss
@@ -34,13 +34,21 @@
     width: 100%;
     height: 120px;
 }
-.btn-back-container{
+.button-panle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    right: 0;
+    top: -4px;
+    position: absolute;
+}
+.button-panle button{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 50px;
     height: 50px;
-    position: absolute;
-    right: 5px;
-    top: 40px;
+    border-radius: 50px;
+    position: relative;
 }
