--- a/koji/src/app/user-page/body/join-group/join-group.component.scss
+++ b/koji/src/app/user-page/body/join-group/join-group.component.scss
@@ -21,6 +21,7 @@
     align-items: center;
     width: 100%;
     height: 120px;
+    border-bottom: 2px solid black;
 }
 .btn-back-container{
     display: flex;
@@ -31,4 +32,44 @@
     position: absolute;
     right: 5px;
     top: 40px;
+}.body{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 120px;
+    width: 100%;
+    height: 350px;
+    flex-direction: column;
+}
+.btn-back-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 5px;
+    top: 40px;
+}
+
+.result-container{
+    width: 50%; height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.result{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+}
+.join-btn{
+    position: relative;
+    // left: -100px;
+    width: 150px;
+    height: 40px;
 }
