--- a/koji/src/app/user-page/nav-bar/nav-bar.component.html
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.html
@@ -14,10 +14,10 @@
             </div>
         </div>
         <div class="options-container">
-            <button class="btn btn-dark text-white row option-item mb-3">تنظیم قرار جدید</button>
+            <button class="btn btn-dark text-white row option-item mb-3" (click)="navigate('createEvent')">تنظیم قرار جدید</button>
             <button class="btn btn-dark text-white row option-item mb-3">نمایش پروفایل</button>
-            <button class="btn btn-dark text-white row option-item mb-3">جستوجوی گروه</button>
-            <button class="btn btn-dark text-white row option-item mb-3">ساختن گروه</button>
+            <button class="btn btn-dark text-white row option-item mb-3" (click)="navigate('joinGroup')">جستوجوی گروه</button>
+            <button class="btn btn-dark text-white row option-item mb-3" (click)="navigate('createGroup')">ساختن گروه</button>
             <button class="btn btn-dark text-white row option-item mb-3">تنظیمات سایت</button>
         </div>
 
