--- a/koji/src/app/user-page/body/create-event/create-event.component.html
+++ b/koji/src/app/user-page/body/create-event/create-event.component.html
@@ -79,6 +79,23 @@
                     </div>
                 </div>
 
+                <div class="mt-3" dir="rtl">
+                    <label for="group" class="h5">در چه گروهایی میخواهید این  قرار نمایش داده شود</label><br>
+                    <input 
+                        style="width: 70%; height: 40px;" 
+                        type="text" placeholder="نام گروه" 
+                        name="group" id="group"
+                        [formControl]="groupInput"
+                        >
+                    <button class="btn btn-danger m-3" (click)="addGroup()">افزودن</button>
+                    <br><br>
+                </div>
+                <div class="groups-container mb-5 pb-3" dir="rtl" style="position: relative; width: 100%; border-bottom: 2px solid black;">
+                    <div class="place-item bg-success" *ngFor="let group of createEventData.eventGroups;let i=index">
+                        <button class="btn btn-danger mr-3" (click)="deleteGroup(i)">x</button>
+                        <span class="p-3 text-white">{{group}}</span>
+                    </div>
+                </div>
                 <button dir="rtl" type="submit" [disabled]="false" class="submit btn-form btn-success mb-3">ساختن</button>  
             </form>
             <div class="group-link">
