--- a/koji/src/app/user-page/body/join-group/join-group.component.scss
+++ b/koji/src/app/user-page/body/join-group/join-group.component.scss
@@ -32,7 +32,8 @@
     position: absolute;
     right: 5px;
     top: 40px;
-}.body{
+}
+.body{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -54,7 +55,7 @@
 }
 
 .result-container{
-    width: 50%; height: 50px;
+    width: 350px; height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,6 +71,6 @@
 .join-btn{
     position: relative;
     // left: -100px;
-    width: 150px;
-    height: 40px;
+    // width: 150px;
+    // height: 40px;
 }
