--- a/koji/src/app/user-page/body/create-event/create-event.component.scss
+++ b/koji/src/app/user-page/body/create-event/create-event.component.scss
@@ -78,11 +78,11 @@ input,textarea{
     margin: 8px 0;
     width: 100%;
 }
-.places-container,.dates-container,.groups-container{
+.places-container,.dates-container{
     display: flex;
     flex-wrap: wrap;
 }
-.place-item,.dates-item,.groups-container{
+.place-item,.dates-item{
     width: fit-content;
     margin: 2px;
     border-radius: 5px;
