--- a/koji/src/app/user-page/body/event/event.component.scss
+++ b/koji/src/app/user-page/body/event/event.component.scss
@@ -21,13 +21,13 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 200px;
+    height: 150px;
     border-bottom: 2px solid black;
     flex-direction: column;
 }
 .body{
     position: absolute;
-    top: 200px;
+    top: 150px;
     width: 100%;
     // height: 70%;
     border-top: 2px solid black;
@@ -37,12 +37,12 @@
     position: absolute;
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 100px;
     border-bottom: 2px solid black;
 }
 .navigate-item{
     width: 33.33%;
-    height: 48px;
+    height: 98px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -57,13 +57,22 @@
 }
 .conditions-container{
     position: absolute;
-    top: 50px;
+    top: 100px;
     // height: 90%;
     width: 100%;
     padding: 30px;
 }
 .conditions-container form{
     padding-right: 30px;
+}
+.user-conditions{
+
+}
+.all-conditions{
+
+}
+.final-conditions{
+
 }
 .places-container,.dates-container{
     display: flex;
@@ -82,7 +91,7 @@
     right: 0;
     top: -4px;
     position: absolute;
-    height: 202px;
+    height: 150px;
 }
 .button-panle button{
     display: flex;
