--- a/koji/src/app/user-page/body/group/group.component.scss
+++ b/koji/src/app/user-page/body/group/group.component.scss
@@ -16,9 +16,11 @@
     overflow: auto;
 }
 .event{
+    position: relative;
+    top: -8px;
     width: 100%;
     height: 100px;
-    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -33,6 +35,7 @@
     align-items: center;
     width: 100%;
     height: 120px;
+    border-bottom: 2px solid black;
 }
 .button-panle{
     display: flex;
@@ -40,7 +43,7 @@
     justify-content: center;
     flex-direction: column;
     right: 0;
-    top: -4px;
+    top: -8px;
     position: absolute;
 }
 .button-panle button{
