--- a/koji/src/app/user-page/body/join-group/join-group.component.scss
+++ b/koji/src/app/user-page/body/join-group/join-group.component.scss
@@ -32,8 +32,7 @@
     position: absolute;
     right: 5px;
     top: 40px;
-}
-.body{
+}.body{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -55,7 +54,7 @@
 }
 
 .result-container{
-    width: 350px; height: 50px;
+    width: 50%; height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,6 +70,6 @@
 .join-btn{
     position: relative;
     // left: -100px;
-    // width: 150px;
-    // height: 40px;
+    width: 150px;
+    height: 40px;
 }
