--- a/koji/src/app/user-page/body/user-home/user-home.component.scss
+++ b/koji/src/app/user-page/body/user-home/user-home.component.scss
@@ -5,7 +5,6 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    
 }
 .home{
     border-radius: 15px;
@@ -17,9 +16,11 @@
     overflow: auto;
 }
 .group{
+    position: relative;
+    top: -8px;
     width: 100%;
     height: 100px;
-    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -34,4 +35,5 @@
     align-items: center;
     width: 100%;
     height: 120px;
+    border-bottom: 2px solid black;
 }
